k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc 
spec: 
  selector: 
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
