k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  labels:
    app.kubernetes.io/name: user-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/users"
        backend:
          service:
            name: user-service-svc
            port:
              number: 8080
